--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando ambiente Desarrollo
-configuracion.autor.nombre=Jafet
-configuracion.autor.email=shenflores17.js@gmail.com
+configuracion.autor.nombre=John Doe
+configuracion.autor.email=johndoe@gmail.com
